build woes